derive/tests/snapshots/self_referencing_cascade/Folder/table.snap
---
source: derive/src/characterization_tests.rs
---
// Documentation appended to the struct:
///
/// # Foreign keys of the `folder` table
///
/// - `parent_folder_id` references the `id` column of the `folder` table (`self`).
///   - On delete: `Delete`
///   - On soft delete: `SoftDelete`
///
/// # Tables referencing the `folder` table
///
/// - the `folder` table (`self`)

pub trait this_compilation_error_occurs_because_the_folder_table_has_no_foreign_key_attribute_referencing_the_folder_table {}
pub trait this_compilation_error_occurs_because_the_folder_table_is_not_deletable_or_has_no_referenced_by_attribute_referencing_the_folder_table {}
pub trait this_compilation_error_occurs_because_the_folder_table_is_not_soft_deletable_or_has_no_referenced_by_attribute_referencing_the_folder_table {}
const _: () = {
    use self::this_compilation_error_occurs_because_the_folder_table_has_no_foreign_key_attribute_referencing_the_folder_table;
    use self::this_compilation_error_occurs_because_the_folder_table_is_not_deletable_or_has_no_referenced_by_attribute_referencing_the_folder_table;
    use self::this_compilation_error_occurs_because_the_folder_table_is_not_soft_deletable_or_has_no_referenced_by_attribute_referencing_the_folder_table;
};
#[derive(
    Clone,
    Debug,
    PartialEq,
    PartialOrd,
    Eq,
    Ord,
    Hash,
    ::spacetimedb::SpacetimeType
)]
pub struct FolderId {
    value: u64,
}
impl Default for FolderId {
    fn default() -> FolderId {
        FolderId {
            value: Default::default(),
        }
    }
}
impl std::fmt::Display for FolderId {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{} {{ id: {:?} }}", "FolderId", self.value)
    }
}
impl crate::spacetimedsl::Wrapper<u64> for FolderId {
    fn new(value: u64) -> Self {
        Self { value }
    }
    fn value(&self) -> u64 {
        self.value.clone()
    }
}
impl From<&Folder> for FolderId {
    fn from(value: &Folder) -> Self {
        FolderId {
            value: value.id.clone(),
        }
    }
}
impl From<&Folder> for Option<FolderId> {
    fn from(value: &Folder) -> Option<FolderId> {
        Some(FolderId {
            value: value.id.clone(),
        })
    }
}
impl From<&FolderId> for Option<FolderId> {
    fn from(value: &FolderId) -> Option<FolderId> {
        use crate::spacetimedsl::Wrapper;
        Some(FolderId::new(value.value()))
    }
}
impl From<&FolderId> for FolderId {
    fn from(value: &FolderId) -> Self {
        use crate::spacetimedsl::Wrapper;
        FolderId::new(value.value())
    }
}
impl Folder {
    ///
    pub fn get_id(&self) -> FolderId {
        use crate::spacetimedsl::Wrapper;
        FolderId::new(self.id.clone())
    }
    /**References the `id` column of the `folder` table (`self`).

- On delete: `Delete`
- On soft delete: `SoftDelete`*/
    pub fn get_parent_folder_id(&self) -> FolderId {
        use crate::spacetimedsl::Wrapper;
        FolderId::new(self.parent_folder_id.clone())
    }
    /**References the `id` column of the `folder` table (`self`).

- On delete: `Delete`
- On soft delete: `SoftDelete`*/
    pub fn set_parent_folder_id(
        &mut self,
        parent_folder_id: impl Into<FolderId>,
    ) -> FolderId {
        use crate::spacetimedsl::Wrapper;
        let old_value = std::mem::replace(
            &mut self.parent_folder_id,
            parent_folder_id.into().value(),
        );
        FolderId::new(old_value)
    }
    ///
    pub fn get_deleted(&self) -> &bool {
        use crate::spacetimedsl::Wrapper;
        &self.deleted
    }
}
///
pub struct CreateFolder {
    pub parent_folder_id: FolderId,
}

// Generated DSL methods:
// count_of_all_folders
// create_folder
// delete_folder_by_id
// delete_folders_by_parent_folder_id
// execute_on_delete_strategies_of_referencing_tables_after_multiple_rows_of_the_folder_table_were_deleted
// execute_on_delete_strategies_of_referencing_tables_after_multiple_rows_of_the_folder_table_were_soft_deleted
// execute_on_delete_strategies_of_referencing_tables_after_one_row_of_the_folder_table_was_deleted
// execute_on_delete_strategies_of_referencing_tables_after_one_row_of_the_folder_table_was_soft_deleted
// execute_on_delete_strategies_of_the_folder_table_after_multiple_rows_of_the_folder_table_were_deleted
// execute_on_delete_strategies_of_the_folder_table_after_multiple_rows_of_the_folder_table_were_soft_deleted
// execute_on_delete_strategies_of_the_folder_table_after_one_row_of_the_folder_table_was_deleted
// execute_on_delete_strategies_of_the_folder_table_after_one_row_of_the_folder_table_was_soft_deleted
// get_all_folders
// get_folder_by_id
// get_folders_by_parent_folder_id
// soft_delete_folder_by_id
// soft_delete_folders_by_parent_folder_id
// update_folder_by_id
