derive/tests/snapshots/self_referencing_cascade/Folder/update_folder_by_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to update a `Folder` row of the `folder` table whose value matches the value from the unique single-column btree index on the `id` column.

# Foreign keys

Fails with `ReferenceIntegrityViolation` unless each of these columns references a row whenever its value changes:

- `parent_folder_id`: a row of the `folder` table (`self`), or `0`*/
    pub fn update_folder_by_id<'a>(
        &'a self,
        folder: Folder,
    ) -> Result<Folder, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        let mut folder = folder;
        let mut the_same_or_another_folder: Option<Folder> = None;
        let parent_folder_id = folder.get_parent_folder_id().value();
        if parent_folder_id.ne(&0) {
            if the_same_or_another_folder.is_none() {
                the_same_or_another_folder = match self
                    .db()
                    .folder()
                    .id()
                    .find(folder.get_id().value())
                {
                    Some(folder) => Some(folder),
                    None => {
                        return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                            table_name: "folder".into(),
                            column_names_and_row_values: format!(
                                "{{ id : {} }}", folder.get_id().value()
                            )
                                .into(),
                        });
                    }
                };
            }
            if the_same_or_another_folder
                .as_ref()
                .expect(
                    "the stored row is looked up by its primary key before its foreign key columns are compared",
                )
                .get_parent_folder_id()
                .ne(&folder.get_parent_folder_id())
            {
                match self.get_folder_by_id(folder.get_parent_folder_id()) {
                    Ok(_) => {}
                    Err(_) => {
                        return Err(
                            crate::spacetimedsl::error::SpacetimeDSLError::ReferenceIntegrityViolation(crate::spacetimedsl::error::ReferenceIntegrityViolationError::OnCreateOrUpdate {
                                table_name: "folder".into(),
                                create_or_update: crate::spacetimedsl::error::CreateOrUpdate::Update,
                                column_names_and_row_values: format!(
                                    "{{ parent_folder_id : {} }}", parent_folder_id
                                )
                                    .into(),
                            }),
                        );
                    }
                };
            }
        }
        let folder = self.db().folder().id().update(folder);
        Ok(folder)
    }
}
