derive/tests/snapshots/self_referencing_cascade/Folder/wrapper_methods.snap
---
source: derive/src/characterization_tests.rs
---
impl FolderId {
    /**Get all `Folder` rows whose `parent_folder_id` column references this `FolderId`.

Use it like `folder_id.get_folders_by_parent_folder_id(&dsl)`.*/
    pub fn get_folders_by_parent_folder_id<'a, T: 'a + crate::spacetimedsl::ReadContext>(
        &self,
        dsl: impl Into<crate::spacetimedsl::ReadOnlyDSL<'a, T>>,
    ) -> Vec<Folder> {
        dsl.into().get_folders_by_parent_folder_id(self).collect()
    }
}
impl FolderId {
    /**Get the row of the `folder` table which the `parent_folder_id` column of the `Folder` row with this `FolderId` references.

Use it like `folder_id.get_parent_folder(&dsl)`.*/
    pub fn get_parent_folder<'a, T: 'a + crate::spacetimedsl::ReadContext>(
        &self,
        dsl: impl Into<crate::spacetimedsl::ReadOnlyDSL<'a, T>>,
    ) -> Result<
        <self::folder__TableHandle as ::spacetimedb::Table>::Row,
        crate::spacetimedsl::error::SpacetimeDSLError,
    > {
        let dsl = dsl.into();
        let folder = dsl.get_folder_by_id(self)?;
        dsl.get_folder_by_id(folder.get_parent_folder_id())
    }
}
